testsuite/poke.pkl/gt-f32-diag-1.pk
/* { dg-do compile } */

var res
  = (2 as uint<15>) .> 1; /* { dg-error "invalid operand .*" } */
